Fix double scrollbar issue on agen-modal mobile view by hidding the bg content (but only on mobile).

--- a/src/app/about.scss
+++ b/src/app/about.scss
@@ -12,7 +12,11 @@
       width: 100%;
     }
 
-    .header-image {
+		.mobile-bg-hide {
+		  display: none;
+		}
+
+		.header-image {
       width: 40%;
     }
 
@@ -228,7 +232,12 @@
           width: 100%;
         }
       }
-    }
+		}
+
+		.mobile-bg-hide {
+			height: 0;
+		  overflow: hidden;
+		}
     .ham-menu {
       background-size: 94%;
     }
